--- a/html_boilerplate/index.html
+++ b/html_boilerplate/index.html
@@ -5,6 +5,21 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <center><h1>This is heading 1</h1></center>
+        <p>Lorem ipsum <strong>dolor sit </strong>amet consectetur adipisicing elit. Ex ipsum cupiditate eius quam dolorum repellendus minus eum quo sit doloribus optio, sequi labore dicta quae vel perferendis reprehenderit soluta beatae.</p>
+        <p>Lorem ipsum<em> dolor, sit amet consectetur </em>adipisicing elit. Quae, doloremque assumenda facilis vero sunt architecto dolorum dignissimos quidem. Vero magni nemo possimus saepe cumque ipsam iste aliquid ea distinctio. Perferendis.</p>
+        <p>This is unordered lists</p>
+        <ul>
+            <li><a href="https://google.com">Absolute link</a></li>
+            <li><a href="about.html">Relative Link</a></li>
+            <li>Item 3</li>
+        </ul>
+        <p>This is ordered list</p>
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ol>
+        <center><img src="img.jpg" alt="background image"></center>
     </body>
     </html>
